bug: add path of data-process

--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -2,6 +2,7 @@ on:
   push:
     paths:
       - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
+      - ./data-process.js
   workflow_dispatch: # Required even though this is currently empty
   schedule:
     - cron: '* * * * *' # Run this workflow every minute
