bug: correct path to data-process

--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -2,7 +2,6 @@ on:
   push:
     paths:
       - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
-      - ./data-process.js
   workflow_dispatch: # Required even though this is currently empty
   schedule:
     - cron: '* * * * *' # Run this workflow every minute
@@ -25,4 +24,4 @@ jobs:
         with:
           http_url: https://eptclive.herokuapp.com/incident-metrics/incident-metrics # The data to fetch every minute
           downloaded_filename: incident-metrics.json # The http_url gets saved and renamed in our repository as incident-metrics.json
-          postprocess: ./data-process.js
+          postprocess: data-process.js
