--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -1,27 +1,24 @@
 on:
   push:
     paths:
-      - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
-  workflow_dispatch: # Required even though this is currently empty
+      - .github/workflows/flat.yml
+      - ./postprocess.js
+  workflow_dispatch: null
   schedule:
-    - cron: '* * * * *' # Run this workflow every minute
-
+    - cron: "* * * * *"
 jobs:
   scheduled:
     runs-on: ubuntu-latest
-    steps: # This workflow has 3 steps
-      # The first step is to check out the repository so it can read the files inside of it and do other operations
+    steps:
       - name: Check out repo
         uses: actions/checkout@v2
-      # This step installs Deno, which is a new Javascript runtime that improves on Node. We'll use it for postprocessing later
       - name: Setup deno
         uses: denoland/setup-deno@main
         with:
           deno-version: v1.x
-      # The third step is a Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
-      - name: Fetch data 
+      - name: Fetch data
         uses: githubocto/flat@v2
         with:
-          http_url: https://eptclive.herokuapp.com/incident-metrics/incident-metrics # The data to fetch every minute
-          downloaded_filename: incident-metrics.json # The http_url gets saved and renamed in our repository as incident-metrics.json
-          # postprocess: data-process.js
+          http_url: https://eptclive.herokuapp.com/incident-metrics/incident-metrics
+          downloaded_filename: incident-metrics.json
+          postprocess: ./postprocess.js
